--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
+    tools:context=".activity.MainActivity"
     android:orientation="horizontal">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,7 +16,7 @@
         android:minHeight="?attr/actionBarSize"
         app:title="Marvel movies"
         app:titleTextColor="@color/white"
-        tools:context=".MainActivity"
+        tools:context=".activity.MainActivity"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
         <RelativeLayout
             android:layout_width="match_parent"
