--- a/app/src/main/res/layout/activity_book_full_information.xml
+++ b/app/src/main/res/layout/activity_book_full_information.xml
@@ -7,116 +7,130 @@
     android:background="@color/black"
     tools:context=".activity.BookFullInformationActivity">
 
-
-    <ImageView
-        android:id="@+id/book_image"
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:elevation="2dp"
-        app:layout_constraintHeight_percent="0.3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-
-        />
-
-    <TextView
-        android:id="@+id/book_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:lines="2"
-        android:maxLines="3"
-        android:text="@string/origin"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/book_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.6"
-
-        />
-
-    <TextView
-        android:id="@+id/book_year"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="@string/_2017"
-        android:textAlignment="textEnd"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@id/book_image"
-        app:layout_constraintTop_toBottomOf="@id/book_title"
-        app:layout_constraintWidth_percent="0.25" />
-
-    <TextView
-        android:id="@+id/book_pages"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="@string/_2017"
-        android:textAlignment="textStart"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintStart_toEndOf="@id/book_year"
-        app:layout_constraintTop_toBottomOf="@id/book_title"
-        app:layout_constraintWidth_percent="0.25" />
-
-    <TextView
-        android:id="@+id/book_genre"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:lines="2"
-        android:maxLines="3"
-        android:text="@string/genre"
-        android:textAlignment="textStart"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@id/book_image"
-        app:layout_constraintTop_toBottomOf="@id/book_pages"
-        app:layout_constraintWidth_percent="0.6" />
-
-
-    <TextView
-        android:id="@+id/book_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:fillViewport="true"
-        android:lines="14"
-        android:maxLines="14"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:scrollbars="vertical"
-        android:text="@string/description"
-        android:textAlignment="textStart"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:paddingTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/book_image"
-        app:layout_constraintWidth_percent="0.9" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/book_image"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="20dp"
+                android:contentDescription="@string/todo"
+                android:elevation="2dp"
+                app:layout_constraintHeight_percent="0.3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.4" />
+
+            <TextView
+                android:id="@+id/book_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:lines="2"
+                android:maxLines="3"
+                android:text="@string/origin"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/book_image"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.6" />
+
+            <TextView
+                android:id="@+id/book_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/_2017"
+                android:textAlignment="textEnd"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@id/book_image"
+                app:layout_constraintTop_toBottomOf="@id/book_title"
+                app:layout_constraintWidth_percent="0.25" />
+
+            <TextView
+                android:id="@+id/book_pages"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/_2017"
+                android:textAlignment="textEnd"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/book_title"
+                app:layout_constraintWidth_percent="0.25" />
+
+            <TextView
+                android:id="@+id/book_genre"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:lines="2"
+                android:maxLines="3"
+                android:text="@string/genre"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@id/book_image"
+                app:layout_constraintTop_toBottomOf="@id/book_pages"
+                app:layout_constraintWidth_percent="0.6" />
 
 
-    <Button
-        android:id="@+id/btn_website"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="@color/white"
-        android:text="@string/see_it_on_website"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/book_description"
-        app:layout_constraintWidth_percent="0.5">
+            <TextView
+                android:id="@+id/book_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fillViewport="true"
+                android:lines="14"
+                android:maxLines="14"
+                android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="10dp"
+                android:scrollbars="vertical"
+                android:text="@string/description"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/book_image"
+                app:layout_constraintWidth_percent="0.9" />
 
-    </Button>
+
+            <Button
+                android:id="@+id/btn_website"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/white"
+                android:text="@string/see_it_on_website"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/book_description"
+                app:layout_constraintWidth_percent="0.5">
+
+            </Button>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
